==> AlkaMotors/AM32/Mcu/e230/Src/IO.c <==
/*
 * IO.c
 *
 *  Created on: Sep. 26, 2020
 *      Author: Alka
 */

#include "IO.h"

#include "common.h"
#include "dshot.h"
#include "functions.h"
#include "serial_telemetry.h"
#include "targets.h"
#include "signal.h"

char ic_timer_prescaler = CPU_FREQUENCY_MHZ / 5 - 2;
uint32_t dma_buffer[64] = { 0 };
char out_put = 0;
uint8_t buffer_padding = 0;
uint8_t buffer_size = 64;
uint16_t change_time = 0;
extern void processDshot(void);

void runDshotCheck(){
     if((DMA_CHCNT(INPUT_DMA_CHANNEL)) < 63){
      if(armed){
        if ((TIMER_CNT(IC_TIMER_REGISTER) - dma_buffer[63-DMA_CHCNT(INPUT_DMA_CHANNEL)]) > (valid_packet_high<<1)){
          if(DMA_CHCNT(INPUT_DMA_CHANNEL) <= 32){
            DMA_start_bit = 32-DMA_CHCNT(INPUT_DMA_CHANNEL);
            transfercomplete();
            EXTI_SWIEV |= (uint32_t)EXTI_15;
          }
        
        dma_channel_disable(INPUT_DMA_CHANNEL);
        DMA_CHCNT(INPUT_DMA_CHANNEL) = 64;
        dma_channel_enable(INPUT_DMA_CHANNEL);
        TIMER_CNT(IC_TIMER_REGISTER) = 0;
        DMA_start_bit = 0;
        }

    }else{
      if(DMA_CHCNT(INPUT_DMA_CHANNEL) <= 32){
      transfercomplete();
      processDshot();
 //     EXTI_SWIEV |= (uint32_t)EXTI_15;
        dma_channel_disable(INPUT_DMA_CHANNEL);
        DMA_CHCNT(INPUT_DMA_CHANNEL) = 64;
        dma_channel_enable(INPUT_DMA_CHANNEL);
        TIMER_CNT(IC_TIMER_REGISTER) = 0;
      }
    }
    } 
  
}

void receiveDshotDma()
{
    RCU_REG_VAL(RCU_TIMER2RST) |= BIT(RCU_BIT_POS(RCU_TIMER2RST));
    RCU_REG_VAL(RCU_TIMER2RST) &= ~BIT(RCU_BIT_POS(RCU_TIMER2RST));
    RCU_REG_VAL(RCU_TIMER14RST) |= BIT(RCU_BIT_POS(RCU_TIMER14RST));
    RCU_REG_VAL(RCU_TIMER14RST) &= ~BIT(RCU_BIT_POS(RCU_TIMER14RST));
    TIMER_CHCTL0(IC_TIMER_REGISTER) = 0x21;
    TIMER_CHCTL2(IC_TIMER_REGISTER) = 0xa;
    TIMER_PSC(IC_TIMER_REGISTER) = ic_timer_prescaler;
    TIMER_CAR(IC_TIMER_REGISTER) = 0xFFFF;
    TIMER_SWEVG(IC_TIMER_REGISTER) |= (uint32_t)TIMER_EVENT_SRC_UPG;
    out_put = 0;
    TIMER_CNT(IC_TIMER_REGISTER) = 0;
    DMA_CHMADDR(INPUT_DMA_CHANNEL) = (uint32_t)&dma_buffer;
    DMA_CHCNT(INPUT_DMA_CHANNEL) = (buffersize & DMA_CHANNEL_CNT_MASK);
    TIMER_DMAINTEN(IC_TIMER_REGISTER) |= (uint32_t)TIMER_DMA_CH0D;
    TIMER_CHCTL2(IC_TIMER_REGISTER) |= (uint32_t)TIMER_CCX_ENABLE;
    TIMER_CTL0(IC_TIMER_REGISTER) |= (uint32_t)TIMER_CTL0_CEN;
    DMA_CHCTL(INPUT_DMA_CHANNEL) = 0x0000098b; // just set the whole reg in one go to enable
}

void sendDshotDma()
{
    RCU_REG_VAL(RCU_TIMER2RST) |= BIT(RCU_BIT_POS(RCU_TIMER2RST));
    RCU_REG_VAL(RCU_TIMER2RST) &= ~BIT(RCU_BIT_POS(RCU_TIMER2RST));
    RCU_REG_VAL(RCU_TIMER14RST) |= BIT(RCU_BIT_POS(RCU_TIMER14RST));
    RCU_REG_VAL(RCU_TIMER14RST) &= ~BIT(RCU_BIT_POS(RCU_TIMER14RST));
    TIMER_CHCTL0(IC_TIMER_REGISTER) = 0x60;
    TIMER_CHCTL2(IC_TIMER_REGISTER) = 0x3;
    TIMER_PSC(IC_TIMER_REGISTER) = output_timer_prescaler;
    TIMER_CAR(IC_TIMER_REGISTER) = 100;
    out_put = 1;
    TIMER_SWEVG(IC_TIMER_REGISTER) |= (uint32_t)TIMER_EVENT_SRC_UPG;
    DMA_CHMADDR(INPUT_DMA_CHANNEL) = (uint32_t)&gcr;
    DMA_CHCNT(INPUT_DMA_CHANNEL) = ((23 + buffer_padding) & DMA_CHANNEL_CNT_MASK);
    DMA_CHCTL(INPUT_DMA_CHANNEL) = 0x00000989;
    TIMER_DMAINTEN(IC_TIMER_REGISTER) |= (uint32_t)TIMER_DMA_CH0D;
    TIMER_CHCTL2(IC_TIMER_REGISTER) |= (uint32_t)TIMER_CCX_ENABLE;
    TIMER_CCHP(IC_TIMER_REGISTER) |= (uint32_t)TIMER_CCHP_POEN;
    TIMER_CTL0(IC_TIMER_REGISTER) |= (uint32_t)TIMER_CTL0_CEN;
}

uint8_t getInputPinState() { return GPIO_ISTAT(INPUT_PIN_PORT) & (INPUT_PIN); }

void setInputPolarityRising()
{
    TIMER_CHCTL2(IC_TIMER_REGISTER) |= (uint32_t)(TIMER_IC_POLARITY_RISING);
}

void setInputPullDown()
{
    gpio_mode_set(INPUT_PIN_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLDOWN, INPUT_PIN);
}

void setInputPullUp()
{
    gpio_mode_set(INPUT_PIN_PORT, GPIO_MODE_AF, GPIO_PUPD_PULLUP, INPUT_PIN);
}

void enableHalfTransferInt() { DMA_CHCTL(INPUT_DMA_CHANNEL) |= DMA_INT_HTF; }
void setInputPullNone()
{
    gpio_mode_set(INPUT_PIN_PORT, GPIO_MODE_AF, GPIO_PUPD_NONE, INPUT_PIN);
}
